--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -466,16 +466,16 @@ svg.leaflet-image-layer.leaflet-interactive path {
 .leaflet-popup {
 	position: absolute;
 	text-align: center;
-	margin-bottom: 20px;
+	margin-bottom: 0px;
 	}
 .leaflet-popup-content-wrapper {
 	padding: 1px;
 	text-align: left;
-	border-radius: 12px;
+	border-radius:20px;
 	}
 .leaflet-popup-content {
 	margin: 13px 19px;
-	line-height: 1.4;
+	line-height: 1.5;
 	}
 .leaflet-popup-content p {
 	margin: 18px 0;
@@ -503,9 +503,10 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	}
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
-	background: white;
-	color: #333;
+	background: rgba(155, 191, 59, 0.883);
+	color: #000000;
 	box-shadow: 0 3px 14px rgba(0,0,0,0.4);
+	font-weight: bold;
 	}
 .leaflet-container a.leaflet-popup-close-button {
 	position: absolute;
@@ -517,7 +518,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	width: 18px;
 	height: 14px;
 	font: 16px/14px Tahoma, Verdana, sans-serif;
-	color: #c3c3c3;
+	color: #050505;
 	text-decoration: none;
 	font-weight: bold;
 	background: transparent;
