--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -37,7 +37,7 @@
 .leaflet-safari .leaflet-tile-container {
 	width: 1600px;
 	height: 1600px;
-	-webkit-transform-origin: 0 0;
+	/* -webkit-transform-origin: 0 0; */
 	}
 .leaflet-marker-icon,
 .leaflet-marker-shadow {
@@ -90,9 +90,9 @@
 	z-index: 800;
 	}
 /* workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=888319 */
-.leaflet-overlay-pane svg {
+/* .leaflet-overlay-pane svg {
 	-moz-user-select: none;
-	}
+	} */
 
 .leaflet-pane         { z-index: 400; }
 
