--- a/css/filter.css
+++ b/css/filter.css
@@ -2,7 +2,7 @@
 #menu {
     position: absolute;
     top: 50px;
-    left: 120px;
+    left:50%;
     transform: translate(-50%, -50%);
     z-index: 1000; /* Certifique-se de que o menu esteja na frente do mapa */
     background-color: rgba(255, 255, 255, 0.752);
@@ -45,7 +45,7 @@
     padding: 0px;
     border: 0px;
     clear: left;    
-    z-index: 1000; /* Certifique-se de que o menu esteja na frente do mapa */
+    /* z-index: 1000; */
 
 }
 .filterlabel + .filterlabel {
