--- a/css/filter.css
+++ b/css/filter.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 #menu {
     position: absolute;
-    top: 6%;
+    top: 7%;
     left: 120px;
     transform: translate(-50%, -50%);
     z-index: 1000; /* Certifique-se de que o menu esteja na frente do mapa */
@@ -21,6 +21,33 @@
     border-radius: 10px;
     /* height:60px; */
   }
+  #container {
+    top: 22%;
+    position: absolute;
+    z-index: 1000; 
+    padding-left: 10px;
+}
+    #infoDiv {
+        position: relative;
+        top: 10%;
+        border-radius: 10px;
+        background-color: rgba(255, 255, 255, 0.752);
+        padding: 10px;
+        padding-left: 10px; /* Espaço inicial da borda esquerda */
+        width:265px;
+        display: none;
+
+    }
+    #infoDiv2 {
+        position: relative;
+        top: 10%;
+        border-radius: 10px;
+        background-color: rgba(255, 255, 255, 0.752);
+        padding: 10px;
+        padding-left: 10px; /* Espaço inicial da borda esquerda */
+        width: 265px;
+        display: none;
+    }
   @media only screen and (max-width: 600px) {
     #aviso {
         width: 90%; /* Define a largura como 90% da largura da tela em dispositivos com largura de tela de até 600 pixels */
