--- a/css/tabela.css
+++ b/css/tabela.css
@@ -33,6 +33,22 @@ body,
     max-height: 400px;
 }
 
+#setor-container {
+    position: fixed;
+    top: 250px;
+    /* right: 20px; */
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    z-index: 999;
+    overflow-y: auto;
+    max-height: 400px;
+    cursor: pointer; 
+    font-size: 14px; 
+}
+
+
 #table-container.collapsed {
     width: 72px;
     height: 24px;
